WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105867
[EFL][WK2] Invalid use of temporary object in ProcessLauncher::launchProcess()
https://bugs.webkit.org/show_bug.cgi?id=105867
Summary
[EFL][WK2] Invalid use of temporary object in ProcessLauncher::launchProcess()
Chris Dumez
Reported
2012-12-30 03:20:56 PST
A pointer to the data representation of a temporary object is stored in prefixedExecutablePath.
Attachments
Patch
(2.25 KB, patch)
2012-12-30 03:30 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-12-30 03:30:29 PST
Created
attachment 180952
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-30 03:57:55 PST
Comment on
attachment 180952
[details]
Patch Clearing flags on attachment: 180952 Committed
r138574
: <
http://trac.webkit.org/changeset/138574
>
WebKit Review Bot
Comment 3
2012-12-30 03:58:00 PST
All reviewed patches have been landed. Closing bug.
Thiago Marcos P. Santos
Comment 4
2012-12-30 04:44:43 PST
Comment on
attachment 180952
[details]
Patch What is this patch fixing? I failed to see the illegal assignment.
Chris Dumez
Comment 5
2012-12-30 04:45:58 PST
Comment on
attachment 180952
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=180952&action=review
> Source/WebKit2/UIProcess/Launcher/efl/ProcessLauncherEfl.cpp:-68 > - prefixedExecutablePath = prefixedExecutablePathStr.utf8().data();
This line is the what I'm fixing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug