[EFL][WK2] Invalid use of temporary object in ProcessLauncher::launchProcess() https://bugs.webkit.org/show_bug.cgi?id=105867

Reviewed by Kenneth Rohde Christiansen.

Fix invalid use of temporary object in ProcessLauncher::launchProcess()
for prefixedExecutablePath.

* UIProcess/Launcher/efl/ProcessLauncherEfl.cpp:
(WebKit::ProcessLauncher::launchProcess):


Canonical link: https://commits.webkit.org/124058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138574 268f45cc-cd09-0410-ab3c-d52691b4dbfc